--- a/klassify/klassify.csproj
+++ b/klassify/klassify.csproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Program.Sql.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
