Add example.env to build output

--- a/klassify/example.env
+++ b/klassify/example.env
@@ -2,3 +2,5 @@ KLASSIFY_USER=your_user
 KLASSIFY_PASSWORD=superstrong
 KLASSIFY_SERVER=tcp:yourdb.database.windows.net,1433
 KLASSIFY_DATABASE=your_database_name
+KLASSIFY_OUT=C:\your\output\folder
+KLASSIFY_TIMEOUT=30
